--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/dbprojeto1
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.properties.enable_lazy_load_no_trans=true
